Add: .env.example 설명

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 everytime_id=[에브리타임 본인 계정 아이디]
 everytime_password=[에브리타임 본인 계정 비밀번호]
 chromedriver_filepath=[chromdriver.exe 프로그램 경로(e.g. chromdriver_win32/chromedriver.exe)]
-hostname=[host 이름]
-port=[port 번호]
+mongodb_uri=[mongodb url(e.g. mongodb://localhost:27017)]
+db=[database name]
